--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -15,6 +15,12 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
+
+  h1 {
+    display: none;
+    font-family: 'Lobster', cursive;
+    font-size: 42px;
+  }
 }
 
 .btn-main {
@@ -31,5 +37,131 @@ body {
 
   &:hover {
     transform: scale(1.15);
+  }
+}
+
+.popup {
+  display: none;
+  left: 50%;
+  top: 50%;
+  position: fixed;
+  margin-top: -150px;
+  z-index: 1;
+  margin-left: -100px;
+}
+
+.popup-form {
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px 120px 10px;
+  width: 10%;
+  border-radius: 0.5em;
+  
+  h1 {
+    font-family: 'Lobster', cursive;
+    margin-bottom: 20px;
+  }
+
+  #email {
+    margin-bottom: 20px;
+    padding: 15px 30px;
+    border: 1px solid #000000;
+  }
+
+  #passwd {
+    margin-bottom: 20px;
+    padding: 15px 30px;
+    border: 1px solid #000000;
+  }
+
+  #container {
+    display: inline-block;
+    position: relative;
+    padding-left: 15px;
+    margin-bottom: 12px;
+    font-size: 16px;
+    white-space: nowrap;
+
+    span {
+      margin-left: 10px;
+    }
+  }
+  
+  #container input {
+    position: absolute;
+    opacity: 0;
+    height: 0;
+    width: 0;
+    vertical-align: middle;
+  }
+  
+  #checkmark {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: -5px;
+    height: 16px;
+    width: 16px;
+    border: 1px solid #000000;
+    vertical-align: middle;
+    overflow: hidden;
+  }
+  
+  #checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  #container input:checked ~ #checkmark:after {
+    display: block;
+  }
+  
+  #container #checkmark:after {
+    left: 5px;
+    top: 0px;
+    width: 4px;
+    height: 11px;
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+
+  #submit {
+    background: #000000;
+    color: #ffffff;
+    border: none;
+    padding: 10px 70px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 15px 2px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $secondary-color;
+    }
+  }
+
+  #closebtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    font-family: Arial, serif;
+    font-weight: bold;
+    font-size: 1.3em;
+    color: #ffffff;
+    background-color: #000000;
+    width: 22px;
+    height: 22px;
+    top: -5px;
+    right: 175px;
+    border-radius: 50%;
+    cursor: pointer;
   }
 }
